--- a/src/pom.xml
+++ b/src/pom.xml
@@ -269,6 +269,7 @@
 		<module>common/eaas-wikidata</module>
 		<module>blobstore</module>
 		<module>blobstore-client-v2</module>
+		<module>automation</module>
 		<module>dig-pub-sharing</module>
 		<module>environment-proposer</module>
 		<module>image-archive</module>
@@ -774,6 +775,24 @@
 				<artifactId>dig-pub-sharing</artifactId>
 				<version>${project.version}</version>
 				<type>war</type>
+			</dependency>
+			<dependency>
+				<groupId>de.bwl.bwfla</groupId>
+				<artifactId>automation-api</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
+			</dependency>
+			<dependency>
+				<groupId>de.bwl.bwfla</groupId>
+				<artifactId>automation-client</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
+			</dependency>
+			<dependency>
+				<groupId>de.bwl.bwfla</groupId>
+				<artifactId>automation-impl</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
