--- a/src/automation/impl/pom.xml
+++ b/src/automation/impl/pom.xml
@@ -6,7 +6,7 @@
     <description>Automation Implementation</description>
     <packaging>jar</packaging>
     <parent>
-        <groupId>de.bwl.bwfla</groupId>
+        <groupId>com.openslx.eaas</groupId>
         <artifactId>automation-all</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
@@ -17,12 +17,22 @@
             <artifactId>common</artifactId>
         </dependency>
         <dependency>
-            <groupId>de.bwl.bwfla</groupId>
+            <groupId>com.openslx.eaas</groupId>
             <artifactId>automation-api</artifactId>
+            <version>${project.version}</version>
+
         </dependency>
         <dependency>
             <groupId>de.bwl.bwfla</groupId>
             <artifactId>blobstore-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.bwl.bwfla</groupId>
+            <artifactId>objectarchive-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.bwl.bwfla.eaas</groupId>
+            <artifactId>eaas-components-api</artifactId>
         </dependency>
     </dependencies>
 </project>
