--- a/src/eaas/components/impl/pom.xml
+++ b/src/eaas/components/impl/pom.xml
@@ -172,14 +172,18 @@
 			<version>3.6</version>
 		</dependency>
         <dependency>
-            <groupId>de.bwl.bwfla</groupId>
+            <groupId>com.openslx.eaas</groupId>
             <artifactId>automation-api</artifactId>
 			<scope>provided</scope>
+			<version>${project.version}</version>
+
 		</dependency>
 		<dependency>
-			<groupId>de.bwl.bwfla</groupId>
+			<groupId>com.openslx.eaas</groupId>
 			<artifactId>automation-impl</artifactId>
 			<scope>provided</scope>
+			<version>${project.version}</version>
+
 		</dependency>
 
     </dependencies>
