Switch build-versioning to be based on 'git describe --long --always' output

--- a/src/common/pom.xml
+++ b/src/common/pom.xml
@@ -39,7 +39,9 @@
 					<commitIdGenerationMode>flat</commitIdGenerationMode>
 					<abbrevLength>10</abbrevLength>
 					<gitDescribe>
-						<skip>true</skip>
+						<skip>false</skip>
+						<always>true</always>
+						<forceLongFormat>true</forceLongFormat>
 					</gitDescribe>
 				</configuration>
 			</plugin>
